--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover"
 		/>
-		<link rel="manifest" href="/manifest.json" />
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
