--- a/src/app.html
+++ b/src/app.html
@@ -11,6 +11,79 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
+		<style>
+			#splash {
+				position: fixed;
+				top: 0;
+				left: 0;
+				width: 100vw;
+				height: 100vh;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				background: #ffffff;
+				z-index: 9999;
+				transition:
+					transform 0.8s ease,
+					opacity 0.8s ease;
+			}
+			#splash.exit {
+				opacity: 0;
+				transform: scale(2);
+				pointer-events: none;
+			}
+			#splash svg {
+				width: 80px;
+				height: auto;
+				animation: pulse 1s infinite ease-in-out;
+			}
+			@keyframes pulse {
+				0% {
+					transform: scale(1);
+					opacity: 1;
+				}
+				50% {
+					transform: scale(1.08);
+					opacity: 0.85;
+				}
+				100% {
+					transform: scale(1);
+					opacity: 1;
+				}
+			}
+		</style>
+		<div id="splash">
+			<svg
+				version="1.2"
+				xmlns="http://www.w3.org/2000/svg"
+				viewBox="0 0 240 240"
+				width="240"
+				height="240"
+				class="logo mx-auto h-16 w-auto"
+			>
+				<style>
+					.a {
+						fill: #8f001a;
+					}
+				</style>
+				<path
+					class="a"
+					d="m193.4 46.4v-12.7h-24.1c-10.4-16.5-27.7-25.7-49.8-25.7-22 0-39.6 9.2-49.7 25.7h-24.2v12.7h-23.6v185.7h195.2v-185.7h-23.6zm-161.1 175.2v-164.8h23.6v-12.7h19.7l1.6-2.7c10.3-19.2 28.9-23.1 42.3-23.1 13.5 0 32 4.1 42.3 23.1l1.6 2.7h19.7v12.7h23.6v164.8h-174.6z"
+				/>
+				<path fill-rule="evenodd" class="a" d="m193.2 188.4v5.7h-147.6v-5.7z" />
+				<path fill-rule="evenodd" class="a" d="m196.4 199.9v5.7h-153.7v-5.7z" />
+				<path
+					class="a"
+					d="m185.4 172.4l-1.5-56.9c0.6 0.4 1 0.6 1.7 0.6 1.8 0 3.4-1.4 3.4-3.4 0-1.9-0.4-1.7-1-2.3h2.5v-5.7h-141.8v5.7h2.6c-0.6 0.6-1 1.4-1 2.3 0 1.8 1.3 3.4 3.3 3.4 1.9 0 1.2-0.2 1.8-0.6l-1.6 56.9h-5.1v10.4h141.6v-10.4h-5.1zm-29.4-56.5c1.8 0 3.3-1.4 3.3-3.4 0-1.9-0.4-1.7-1-2.3h11.5c-0.5 0.6-0.9 1.4-0.9 2.3 0 1.8 1.3 3.4 3.3 3.4 1.9 0 1.2-0.2 1.7-0.6l-1.5 56.9h-16.6l-1.6-56.9c0.6 0.4 1 0.6 1.8 0.6zm-29.6 0c1.7 0 3.3-1.4 3.3-3.4 0-1.9-0.4-1.7-1-2.3h11.5c-0.6 0.6-1 1.4-1 2.3 0 1.8 1.4 3.4 3.3 3.4 2 0 1.2-0.2 1.8-0.6l-1.6 56.9h-16.5l-1.6-56.9c0.6 0.4 1 0.6 1.8 0.6zm-29.7 0c1.8 0 3.3-1.4 3.3-3.4 0-1.9-0.4-1.7-1-2.3h11.7c-0.5 0.6-0.9 1.4-0.9 2.3 0 1.8 1.3 3.4 3.3 3.4 1.9 0 1.2-0.2 1.7-0.6l-1.5 56.9h-16.6l-1.6-56.9c0.6 0.4 1 0.6 1.8 0.6zm-31.4-0.6c0.6 0.4 1 0.6 1.8 0.6 1.7 0 3.3-1.4 3.3-3.4 0-1.9-0.4-1.7-1-2.3h11.5c-0.6 0.6-1 1.4-1 2.3 0 1.8 1.4 3.4 3.3 3.4 2 0 1.2-0.2 1.8-0.6l-1.6 56.9h-16.5z"
+				/>
+				<path
+					fill-rule="evenodd"
+					class="a"
+					d="m134.7 68.5l-15.2-5.7-15 5.7-61.8 22.6 3.7 9.7 73.1-26.9 73.4 26.9 3.5-9.7-61.7-22.6z"
+				/>
+			</svg>
+		</div>
+
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
