--- a/src/app.html
+++ b/src/app.html
@@ -21,7 +21,7 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				background: #ffffff;
+				background: #f2f2f2;
 				z-index: 9999;
 				transition:
 					transform 0.8s ease,
