center splash on mobile

--- a/src/app.html
+++ b/src/app.html
@@ -33,6 +33,7 @@
 				pointer-events: none;
 			}
 			#splash svg {
+				padding-bottom: env(safe-area-inset-bottom);
 				width: 80px;
 				height: auto;
 				animation: pulse 1s infinite ease-in-out;
