--- a/src/app.html
+++ b/src/app.html
@@ -38,18 +38,20 @@
 				height: auto;
 				animation: pulse 1s infinite ease-in-out;
 			}
-			@keyframes pulse {
-				0% {
-					transform: scale(1);
-					opacity: 1;
-				}
-				50% {
-					transform: scale(1.08);
-					opacity: 0.85;
-				}
-				100% {
-					transform: scale(1);
-					opacity: 1;
+			@media (prefers-reduced-motion: no-preference) {
+				@keyframes pulse {
+					0% {
+						transform: scale(1);
+						opacity: 1;
+					}
+					50% {
+						transform: scale(1.08);
+						opacity: 0.85;
+					}
+					100% {
+						transform: scale(1);
+						opacity: 1;
+					}
 				}
 			}
 		</style>
