move seo to app.html and use absolute paths to og image

--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,33 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover"
 		/>
+		<meta name="title" content="uOttawa Explorer" />
+		<meta
+			name="description"
+			content="Redécouvrez l’Université d’Ottawa! Profitez d’une visite interactive du campus riche en démonstrations, en surprises et en plaisir. // Rediscover uOttawa! Join our interactive campus tour with fun stops, demos, and surprises for everyone."
+		/>
+		<meta
+			name="keywords"
+			content="uottawa explorer, uo explorer, uottawa interactive map, uottawa campus tour"
+		/>
+		<meta name="robots" content="index, follow" />
+		<meta name="language" content="English" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://uo-explorer.makerepo.com" />
+		<meta property="og:title" content="uOttawa Explorer" />
+		<meta
+			property="og:description"
+			content="Redécouvrez l’Université d’Ottawa! Profitez d’une visite interactive du campus riche en démonstrations, en surprises et en plaisir. // Rediscover uOttawa! Join our interactive campus tour with fun stops, demos, and surprises for everyone."
+		/>
+		<meta property="og:image" content="https://uo-explorer.makerepo.com/og_image.png" />
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://uo-explorer.makerepo.com" />
+		<meta property="twitter:title" content="uOttawa Explorer" />
+		<meta
+			property="twitter:description"
+			content="Redécouvrez l’Université d’Ottawa! Profitez d’une visite interactive du campus riche en démonstrations, en surprises et en plaisir. // Rediscover uOttawa! Join our interactive campus tour with fun stops, demos, and surprises for everyone."
+		/>
+		<meta property="twitter:image" content="https://uo-explorer.makerepo.com/og_image.png" />
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 		%sveltekit.head%
 	</head>
